<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/shopunit"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="8dp"
    android:layout_marginBottom="8dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/shoplogo"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="0dp"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintRight_toRightOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            card_view:srcCompat="@drawable/carrefour"
            android:contentDescription="@string/shop_logo" />

        <TextView
            android:id="@+id/shopname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/carrefour"
            android:textSize="24sp"
            android:textColor="@color/colorBlack"
            card_view:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="24dp"
            android:layout_marginStart="16dp"
            card_view:layout_constraintLeft_toLeftOf="parent" />

        <TextView
            android:id="@+id/itemsinlist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="0dp"
            android:text="@string/units_in_the_list"
            card_view:layout_constraintLeft_toLeftOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/shopname" />

        <Button
            android:id="@+id/list"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="64dp"
            android:background="@color/colorWhite"
            android:minWidth="50dp"
            android:text="@string/list"
            android:textColor="@color/colorPrimaryDark"
            card_view:layout_constraintLeft_toLeftOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/itemsinlist" />

        <Button
            android:id="@+id/add"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="64dp"
            android:background="@color/colorWhite"
            android:minWidth="50dp"
            android:text="@string/add_to_my_list"
            android:textColor="@color/colorPrimaryDark"
            card_view:layout_constraintLeft_toRightOf="@+id/list"
            card_view:layout_constraintTop_toBottomOf="@+id/itemsinlist" />

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>